reorganized print css, closes https://github.com/MartijnR/enketo-grid-theme/issues/66 fix for gaps above labels, closes https://github.com/MartijnR/enketo-grid-theme/issues/37 display geopoint inputs without map in one row, closes https://github.com/MartijnR/enketo-grid-theme/issues/29

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -21,6 +21,10 @@ h4 {
     text-align: left;
 }
 
+input, select, textarea {
+    @include font-normal;
+}
+
 /** hide stuff **/
 
 .or [lang]:not(.active), .or-option-translations, .or-appearance-page-break, .or-constraint-msg, .or-required-msg,
