--- a/src/sass/core/_mixins.scss
+++ b/src/sass/core/_mixins.scss
@@ -156,28 +156,3 @@
     -moz-flex-direction: $dir;
     flex-direction: $dir;
 }
-
-// !important is added to make sure a clearfix doesn't override it
-@mixin checkbox-unchecked-icon {
-    @include enketo-icon;
-    content: '\e601' !important;
-    color: $radiocheck-unchecked-color;
-}
-
-@mixin checkbox-checked-icon {
-    @include enketo-icon;
-    content: '\e600' !important;
-    color: $radiocheck-checked-color;
-}
-
-@mixin radio-unchecked-icon {
-    @include enketo-icon;
-    content: '\e60f' !important;
-    color: $radiocheck-unchecked-color;
-}
-
-@mixin radio-checked-icon {
-    @include enketo-icon;
-    content: '\e603' !important;
-    color: $radiocheck-checked-color;
-}
